# Automatic_pet_feeder

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  sections-rom.ld
boards/: esp32_devkitc_procpu.overlay  esp32s3_devkitc_procpu.overlay
common/: CMakeLists.txt  Enums.hpp  Events.hpp  enum_to_string.cpp  enum_to_string.hpp  types.hpp
include/: Application.hpp  HttpsClient.hpp  RTC.hpp  SchedulerRules.hpp  SntpClient.hpp  StepperController.hpp  Storage.hpp  WifiSoftAp.hpp  WifiStation.hpp  certificate.hpp  sntp.hpp  wifi_station.hpp
interface/: CMakeLists.txt  IClock.hpp  IDispatcher.hpp  IHTTPServer.hpp  IJson.hpp  ILed.hpp  IListener.hpp  ILvlSensor.hpp  IMQTT.hpp  IMotor.hpp  INetworkEvents.hpp  IRTC.hpp  ISchedulerRules.hpp  IStorage.hpp  ITaskRunner.hpp  IWatchDog.hpp  IWifi.hpp  IWifiAp.hpp
src/: Application.cpp  HttpsClient.cpp  RTC.cpp  SntpClient.cpp  StepperController.cpp  Storage.cpp  WifiSoftAp.cpp  WifiStation.cpp  main.cpp  sntp.cpp  stepper.cpp  stepper.hpp  wifi.cpp  wifi.hpp  wifi_station.cpp
src/application/: Application.cpp  Application.hpp  CMakeLists.txt  Kconfig.app  SchedulerRules.cpp  SchedulerRules.hpp  TaskRunner.cpp  TaskRunner.hpp
src/application/app/: Application.cpp  Application.hpp
src/devices/led/: CMakeLists.txt  Led.cpp  Led.hpp
src/network/: CMakeLists.txt  Kconfig.Network  NetEvents.hpp  Netmgnt.cpp  Netmgnt.hpp  NetworkService.cpp  NetworkService.hpp  README.md
src/storage/: CMakeLists.txt  Kconfig.Storage  Storage.cpp  Storage.hpp
src/watchdog/: CMakeLists.txt  Kconfig.WTD
tests/: TODO.txt
(+50 files in other folders)
